# ai-autogen-qa

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
graders/: easy.py  hard.py  medium.py
server/: app.py
src/: app.py  constants.py
src/qa_agent/: assistant_thread_manager.py  pdf_graph_agent.py
src/qa_agent/prompts/: pdf_graph_prompts.py
